fix header text on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -213,6 +213,7 @@ footer ul > li a:hover {
 
   h1 {
     font-size: 3rem;
+    line-height: 3rem;
   }
 
   header > p.position {
